# dash-covid19

./: .pre-commit-config.yaml  .travis.yml  CHANGELOG.md  CONTRIBUTING.md  CONTRIBUTING.rst  Makefile  Procfile  README.md  README.rst  app.py  pyproject.toml  requirements.txt  wsgi.py
dash_covid19/: .callbacks.py.swp  __init__.py  app.py  callbacks.py  data.py  index.py  layouts.py
dash_covid19/assets/: dash_table_row.css  stylesheet.css
dash_covid19/helper_components/: __init__.py  button_groups.py  cards.py  dropdown.py  graphs.py  led.py  navbar.py  slider.py  switch.py
data/: iso_lat_lon.csv  testing_data.csv
docs/source/: app.rst  conf.py  helper.rst  index.rst  main_modules.rst  testing.rst
src/dash_covid19/: app.py
tests/: conftest.py  mock_app.py  test_callbacks.py  test_dash_covid19.py  test_index.py  test_layout.py
