[tool.poetry]
name = "dash-covid19"
version = "0.5.0"
description = "An interactive Dash app for viewing Covid-19 data"
authors = ["rbpatt2019 <ryan.patterson.2015@gmail.com>"]
license = "GPL-3.0+"
readme = "README.md"
repository = "https://github.com/rbpatt2019/dash-covid19"
classifiers=[
        "Development Status :: 2 - Pre-Alpha",
        "Intended Audience :: Science/Research",
        "Intended Audience :: Healthcare Indeustry",
        "License :: OSI Approved :: GNU General Public License v3 (GPLv3)",
        "Natural Language :: English",
        "Operating System :: Unix",
        "Programming Language :: Python :: 3.8",
]

[tool.poetry.dependencies]
python = "^3.8"
dash = {extras = ["testing"], version = "^1.12.0"}
pandas = "^1.0.3"
dash-bootstrap-components = "^0.10.0"

[tool.poetry.dev-dependencies]
black = "^19.10b0"
isort = "^4.3.21"
pylint = "^2.5.2"
mypy = "^0.770"
mypy-extensions = "^0.4.3"
codecov = "^2.0.22"
coverage = "^5.1"
pytest = "^5.3.5"
pytest-cov = "^2.8.1"
pytest-instafail = "^0.4.1"
pytest-mypy = "^0.6.2"
pytest-runner = "^5.2"
pre-commit = "^2.3.0"
gunicorn = "^20.0.4"

[tool.isort]
multi_line_output = 3
include_trailing_comma = "True"
force_grid_wrap = 0
use_parentheses = "True"
line_length = 88

[tool.pylint.messages_control]
disable = """,
C,
W0611,
"""

[tool.coverage.report]
exclude_lines = [
        "if __name__ == .__main__.:",
]
show_missing = true

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
