[tool.poetry]
name = "dash-covid19"
version = "1.3.3"
description = "An interactive Dash app for viewing Covid-19 data"
authors = ["rbpatt2019 <rb.patterson.cross@gmail.com>"]
license = "GPL-3.0+"
readme = "README.rst"
repository = "https://github.com/rbpatt2019/dash-covid19"
classifiers=[
        "Development Status :: 4 - Beta",
        "Intended Audience :: Science/Research",
        "Intended Audience :: Healthcare Indeustry",
        "License :: OSI Approved :: GNU General Public License v3 (GPLv3)",
        "Natural Language :: English",
        "Operating System :: Unix",
        "Programming Language :: Python :: 3.8",
]

[tool.poetry.dependencies]
python = "^3.8"
pandas = "^1.0.3"
dash-bootstrap-components = "^0"
dash-daq = "^0"
dash = "^1"

[tool.poetry.dev-dependencies]
black = "^19.10b0"
isort = "^5"
ipdb = "^0"
ipython = "^7"
pylint = "^2"
mypy = "^0"
mypy-extensions = "^0"
codecov = "^2"
coverage = "^5"
pytest = "^6"
pytest-cov = "^2"
pytest-clarity = "^0.3.0-alpha.0"
pytest-sugar = "^0"
pre-commit = "^2"
gunicorn = "^20"
sphinx = "^3"
poetry-version = "^0"
sphinx-rtd-theme = "^0"
selenium = "^3"

[tool.pytest.ini_options]
addopts = """
-vv
--webdriver Chrome
--ignore=docs
--diff-type=split
--doctest-modules
--cov=dash_covid19/
--cov-report term"""

[tool.isort]
profile = "black"
skip_gitignore = true
float_to_top = false

[tool.pylint.messages_control]
disable = """,
C,
W0611,
"""

[tool.pylint.similarities]
min-similarities-lines = 5
ignore-comments = true
ignore-docstrings = true
ignore-imports = true

[tool.coverage.report]
exclude_lines = [
        "if __name__ == .__main__.:",
]
show_missing = true

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
